--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "firebase": "^9.13.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
     "prettier": "2.7.1"
   }
 }
