added final version for korl

--- a/.firebaserc
+++ b/.firebaserc
@@ -5,8 +5,8 @@
   "targets": {
     "dewey-nguyen": {
       "hosting": {
-        "korl": [
-          "kl1stbd"
+        "korl2024": [
+          "korl2024"
         ]
       }
     }
